Combine code form teammates : )
- Register page (Jon Zhang)
- View Post page & Comment (Wen Jin)
- Create Post page (Doreen Xu)
- Search Page, Profile, Login, Navigation bar (Eden Lu)
- Change SQL table script

--- a/Client/Search/Residence-unit.css
+++ b/Client/Search/Residence-unit.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("background.jpg");
+	background-image: url("http://localhost:8080/images/background.jpg");
 }
 
 div.residence-list ul {
@@ -73,5 +73,5 @@ div.residence-list ul {
 }
 
 ::-webkit-scrollbar {
-	display: none;	//Hide scroll bar
+	display: none;
 }
