background of post
- fix bug that missing background image of post

--- a/Client/Post/post.css
+++ b/Client/Post/post.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../Search/background.jpg");
+  background-image: url("http://localhost:8080/images/background.jpg");
 }
 #warning {
   color: red;
