--- a/Client/Post/posts.css
+++ b/Client/Post/posts.css
@@ -2,7 +2,7 @@
   list-style: none;
 }
 body {
-  background-image: url("../Search/background.jpg");
+  background-image: url("http://localhost:8080/images/background.jpg");
   color: white !important;
 }
 a {
