--- a/Client/Administer/Administer.css
+++ b/Client/Administer/Administer.css
@@ -30,3 +30,7 @@ html, body {
 .administerContent .contentBlock {
     margin-bottom: 5px;
 }
+
+.administerContent .freeze {
+    margin-top: 5px;
+}
