--- a/Client/Profile/Profile.css
+++ b/Client/Profile/Profile.css
@@ -44,8 +44,13 @@ html, body {
     margin-top: 20px;
 }
 
+.profile .infoList table,
+.profile .infoList table * {
+    border: 2px solid black;
+}
+
 .profile .infoList .attribute {
-    padding: 20px;
+    padding: 10px;
 	min-width: 600px;
 	max-width: 800px;
     font-size: 26px;
@@ -81,3 +86,4 @@ html, body {
     border-radius: 5px;
     margin: 0 2px 0 2px;
 }
+
