Allow administer to delete user
- Add feature to allow user to delete feature
- Added more tuple for the database to start wilth

--- a/Client/Administer/Administer.css
+++ b/Client/Administer/Administer.css
@@ -26,11 +26,10 @@ html, body {
     font-size: 20px;
 }
 
-.administerContent #sqloptions,
 .administerContent .contentBlock {
     margin-bottom: 5px;
 }
 
-.administerContent .freeze {
-    margin-top: 5px;
+.administerContent button {
+    margin: 5px;
 }
