--- a/views/post.ejs
+++ b/views/post.ejs
@@ -43,6 +43,10 @@
       </ul>
     </div>
 
+    <div class="postImageContainer">
+      <img src="http://localhost:8080/images/<%= postImage %>" alt="">
+    </div>
+
     <div class="commentContainer">
       <h3>Comments</h3>
       <div class="list-group">
