--- a/views/post.ejs
+++ b/views/post.ejs
@@ -44,7 +44,7 @@
     </div>
 
     <div class="postImageContainer">
-      <img src="http://localhost:8080/images/<%= postImage %>" alt="">
+      <img src= "<%= (postImage ? 'http://localhost:8080/images/' + postImage : '') %>"  alt="">
     </div>
 
     <div class="commentContainer">
